--- a/pom.xml
+++ b/pom.xml
@@ -134,11 +134,11 @@
                         </goals>
                     </execution>
                 </executions>
-<!--                <configuration>-->
-<!--                    <apiDocsUrl>http://localhost:8080/v3/api-docs</apiDocsUrl>-->
-<!--                    <outputFileName>openapi.json</outputFileName>-->
-<!--                    <outputDir>${project.build.directory}</outputDir>-->
-<!--                </configuration>-->
+                <configuration>
+                    <apiDocsUrl>http://localhost:8080/v3/api-docs</apiDocsUrl>
+                    <outputFileName>openapi.json</outputFileName>
+                    <outputDir>${project.build.directory}</outputDir>
+                </configuration>
             </plugin>
         </plugins>
     </build>
