--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.7.4</version>
+        <version>3.0.1</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.example.openapi</groupId>
@@ -24,6 +24,7 @@
         <junit-bom.version>5.8.1</junit-bom.version>
         <logcaptor.version>2.7.10</logcaptor.version>
         <springdoc-openapi-ui.version>1.6.12</springdoc-openapi-ui.version>
+        <swagger-annotations.version>1.6.9</swagger-annotations.version>
         <springfox-swagger2.version>3.0.0</springfox-swagger2.version>
 
         <!-- Plugin management -->
@@ -141,24 +142,6 @@
                 <version>${maven-failsafe-plugin.version}</version>
             </plugin>
             <plugin>
-                <groupId>org.springdoc</groupId>
-                <artifactId>springdoc-openapi-maven-plugin</artifactId>
-                <version>${springdoc-openapi-maven-plugin.version}</version>
-                <executions>
-                    <execution>
-                        <phase>integration-test</phase>
-                        <goals>
-                            <goal>generate</goal>
-                        </goals>
-                    </execution>
-                </executions>
-                <configuration>
-                    <apiDocsUrl>http://localhost:8080/v1/library/api-docs</apiDocsUrl>
-                    <outputFileName>openapi.json</outputFileName>
-                    <outputDir>${project.build.directory}</outputDir>
-                </configuration>
-            </plugin>
-            <plugin>
                 <groupId>org.openapitools</groupId>
                 <artifactId>openapi-generator-maven-plugin</artifactId>
                 <version>${openapi-generator-maven-plugin.version}</version>
@@ -174,6 +157,12 @@
                             <generatorName>spring</generatorName>
                             <apiPackage>com.example.openapi.api</apiPackage>
                             <modelPackage>com.example.openapi.model</modelPackage>
+                            <configOptions>
+                                <interfaceOnly>true</interfaceOnly>
+                                <library>spring-cloud</library>
+                                <useSpringBoot3>true</useSpringBoot3>
+                            </configOptions>
+                            <!--<library>spring-boot</library>-->
                         </configuration>
                     </execution>
                 </executions>
