SV - Using latest springdoc-openapi-starter dependencies for spring boot version 3 plus added separate server management port config for exposing apis

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,15 @@
 springdoc:
-  api-docs:
-    path: /api-docs
+#  api-docs:
+#    path: /api-docs
+#  swagger-ui:
+#    path: /swagger-ui.html
+  show-actuator: true
+  use-management-port: true
+management:
+  server:
+    port: 8085
+  # This property enables the openapi and swagger-ui endpoints to be exposed beneath the actuator base path.
+  endpoints:
+    web:
+      exposure:
+        include: openapi, swagger-ui
