--- a/pom.xml
+++ b/pom.xml
@@ -23,9 +23,7 @@
         <jackson-databind-nullable.version>0.2.4</jackson-databind-nullable.version>
         <junit-bom.version>5.9.1</junit-bom.version>
         <logcaptor.version>2.7.10</logcaptor.version>
-        <springdoc-openapi-ui.version>1.6.14</springdoc-openapi-ui.version>
-        <swagger-annotations.version>1.6.9</swagger-annotations.version>
-        <springfox-swagger2.version>3.0.0</springfox-swagger2.version>
+        <springdoc-openapi-starter-ui.version>2.0.2</springdoc-openapi-starter-ui.version>
 
         <!-- Plugin management -->
         <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
@@ -66,23 +64,18 @@
         <!-- Open Api Dependencies -->
         <dependency>
             <groupId>org.springdoc</groupId>
-            <artifactId>springdoc-openapi-ui</artifactId>
-            <version>${springdoc-openapi-ui.version}</version>
+            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+            <version>${springdoc-openapi-starter-ui.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springdoc</groupId>
-            <artifactId>springdoc-openapi-webflux-ui</artifactId>
-            <version>${springdoc-openapi-ui.version}</version>
+            <artifactId>springdoc-openapi-starter-webflux-ui</artifactId>
+            <version>${springdoc-openapi-starter-ui.version}</version>
         </dependency>
         <dependency>
             <groupId>org.openapitools</groupId>
             <artifactId>jackson-databind-nullable</artifactId>
             <version>${jackson-databind-nullable.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>io.springfox</groupId>
-            <artifactId>springfox-swagger2</artifactId>
-            <version>${springfox-swagger2.version}</version>
         </dependency>
 
         <!-- Other Dependencies -->
