--- a/pom.xml
+++ b/pom.xml
@@ -20,10 +20,12 @@
 
         <assertj-core.version>3.23.1</assertj-core.version>
         <commons-lang3.version>3.12.0</commons-lang3.version>
+        <flyway-core.version>9.10.2</flyway-core.version>
         <guava.version>31.1-jre</guava.version>
         <jackson-databind-nullable.version>0.2.4</jackson-databind-nullable.version>
         <junit-bom.version>5.9.1</junit-bom.version>
         <logcaptor.version>2.7.10</logcaptor.version>
+        <mysql-connector-j.version>8.0.31</mysql-connector-j.version>
         <springdoc-openapi-starter-ui.version>2.0.2</springdoc-openapi-starter-ui.version>
 
         <!-- Plugin management -->
@@ -84,6 +86,16 @@
         </dependency>
 
         <!-- Other Dependencies -->
+        <dependency>
+            <groupId>org.flywaydb</groupId>
+            <artifactId>flyway-core</artifactId>
+            <version>${flyway-core.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.mysql</groupId>
+            <artifactId>mysql-connector-j</artifactId>
+            <version>${mysql-connector-j.version}</version>
+        </dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
