--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <commons-lang3.version>3.12.0</commons-lang3.version>
         <flyway-core.version>9.10.2</flyway-core.version>
         <guava.version>31.1-jre</guava.version>
+        <hibernate-validator.version>8.0.0.Final</hibernate-validator.version>
         <jackson-databind-nullable.version>0.2.4</jackson-databind-nullable.version>
         <junit-bom.version>5.9.1</junit-bom.version>
         <logcaptor.version>2.7.10</logcaptor.version>
@@ -105,6 +106,11 @@
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
             <version>${guava.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.hibernate.validator</groupId>
+            <artifactId>hibernate-validator</artifactId>
+            <version>${hibernate-validator.version}</version>
         </dependency>
 
         <!-- Test dependencies -->
