SV - BookRepositoryIT Fixed

--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -6,3 +6,6 @@ spring:
     password: ''
   jpa:
     database-platform: org.hibernate.dialect.H2Dialect
+  flyway:
+    locations:
+      - classpath:scripts/book
